--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-api-file": "openapi --input ./src/docs/openapi.json --output src/api --client axios",
+    "generate-api-url": "node scripts/generate-api.js"
   },
   "dependencies": {
+    "antd": "^6.2.2",
+    "axios": "^1.13.4",
+    "openapi-typescript-codegen": "^0.30.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
