--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "antd": "^6.2.2",
     "axios": "^1.13.4",
+    "dayjs": "^1.11.19",
     "openapi-typescript-codegen": "^0.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
