--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "6.x",
+    "@reduxjs/toolkit": "^2.11.2",
     "antd": "^6.2.2",
     "axios": "^1.13.4",
     "dayjs": "^1.11.19",
@@ -20,6 +21,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.13.0"
   },
