--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "6.x",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.11.2",
-    "antd": "^6.2.2",
+    "antd": "^6.2.3",
     "axios": "^1.13.4",
     "dayjs": "^1.11.19",
     "openapi-typescript-codegen": "^0.30.0",
